<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">Accent Colour Creator</string>
    <string name="app_name_short">ACC</string>
    <string name="color_custom">Custom colour</string>
    <string name="set_custom_color">Tap to set a custom colour</string>
    <string name="color_name">Name your accent colour</string>
    <string name="color_wallpaper">Wallpaper colours</string>
    <string name="created_accents">Created accents</string>
    <string name="presets">Preset Colours</string>
    <string name="set_preset_color">Tap to use preset colours</string>
    <string name="set_wallpaper_color">Tap to use colours from your wallpaper</string>
    <string name="general_header">General</string>
    <string name="display_title">Dark theme</string>
    <string name="colour" translatable="false">%1$s - %2$s</string>
    <string name="accents_header">Accents</string>
    <string name="separate_accents_title">Separate accents</string>
    <string name="create_new">Create</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="info">Info</string>
    <string name="separate_accent_summary_off">Same accent colour will be used for both light &amp; dark themes</string>
    <string name="separate_accent_summary_on">You can now set different accents for light &amp; dark themes</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="lightness">Lightness</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="settings_app_update">App update</string>
    <string name="settings_check_for_updates">Check for updates</string>
    <string name="dl_and_install">Download &amp; install</string>
    <string name="tweak">Tweak colours</string>
    <string name="tweak_summary">Edit the selected colour(s) to your liking</string>

    <string name="picker_title_text">Choose your accent</string>
    <string name="picker_title_text_light">Choose your accent for light theme</string>
    <string name="picker_title_text_dark">Choose your accent for dark theme</string>

    <string name="amber">Amber</string>
    <string name="title_blue">Blue</string>
    <string name="blue_grey">Blue Grey</string>
    <string name="brown">Brown</string>
    <string name="candy_red">Candy Red</string>
    <string name="cyan">Cyan</string>
    <string name="deep_orange">Deep Orange</string>
    <string name="deep_purple">Deep Purple</string>
    <string name="elegant_green">Elegant Green</string>
    <string name="extended_green">Extended Green</string>
    <string name="grey">Grey</string>
    <string name="indigo">Indigo</string>
    <string name="jade_green">Jade Green</string>
    <string name="light_blue">Light Blue</string>
    <string name="light_green">Light Green</string>
    <string name="lime">Lime</string>
    <string name="orange">Orange</string>
    <string name="pale_blue">Pale Blue</string>
    <string name="pale_red">Pale Red</string>
    <string name="pink">Pink</string>
    <string name="title_red">Red</string>
    <string name="teal">Teal</string>
    <!--Not a typo, Google it :D--> <string name="yellove">Yellow</string>

    <string name="wallpaper_primary">Wallpaper primary</string>
    <string name="wallpaer_secondary">Wallpaper secondary</string>
    <string name="wallpaper_tertiary">Wallpaper tertiary</string>
    <string name="about_title_desc">By Akilesh</string>
    <string name="version">Version %s</string>
    <string name="links">Links</string>
    <string name="github_repo">Github repo</string>
    <string name="telegram_group">Telegram group</string>
    <string name="xda_thread">XDA thread</string>
    <string name="downloads">Downloads</string>
    <string name="github_releases">Github releases</string>
    <string name="telegram_channel">Telegram channel (includes beta releases)</string>
    <string name="toast_light_theme_not_selected">Accent color for light theme is not selected</string>
    <string name="toast_color_not_selected">Accent color is not selected</string>
    <string name="toast_name_not_set">Accent name is not set</string>
    <string name="read_storage_permission_rationale">Storage permission is required to get wallpaper colours</string>

    <string name="accent_created">%s created</string>
    <string name="accent_removed">%s removed</string>
    <string name="oos_accent_set">%s set</string>

    <string name="no_root_access_title">Unable to get root access</string>
    <string name="no_root_access_message">Please ensure that:\n1. Your device is rooted using Magisk\n2. ACC is granted root access</string>
    <string name="magisk_not_detected">Magisk not detected!</string>
    <string name="exit">Exit</string>
    <string name="error">Couldn\'t create overlay</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="backup_restore_summary">Save your accents and restore them when needed</string>
    <string name="restore">Restore</string>
    <string name="local_backups">Backups in storage</string>
    <string name="backup_contents">Backup contents</string>
    <string name="hex_code">Hex code</string>
    <string name="backup_deleted">Backup file deleted</string>
    <string name="backup_created">Backup created!</string>
    <string name="accents_restored">Accents restored!</string>
    <string name="color_rename">Rename accent</string>
    <string name="brand_colors">Brand colours</string>
    <string name="fiveHundredpx">500px</string>
    <string name="adobe">Adobe</string>
    <string name="airbnb">Airbnb</string>
    <string name="alibaba">Alibaba</string>
    <string name="alienware">Alienware</string>
    <string name="alphabet">Alphabet</string>
    <string name="amazon">Amazon</string>
    <string name="android">Android</string>
    <string name="archLinux">Arch Linux</string>
    <string name="att">AT&amp;T</string>
    <string name="cadbury">Cadbury</string>
    <string name="cocacola">Coca-Cola</string>
    <string name="debian">Debian</string>
    <string name="dell">Dell</string>
    <string name="discord">Discord</string>
    <string name="fb">Facebook</string>
    <string name="feedly">Feedly</string>
    <string name="ferrari">Ferrari</string>
    <string name="firefox">Firefox</string>
    <string name="github">GitHub</string>
    <string name="google_blue">Google blue</string>
    <string name="google_green">Google green</string>
    <string name="google_yellow">Google yellow</string>
    <string name="google_red">Google red</string>
    <string name="instagram">Instagram</string>
    <string name="lamborghini">Lamborghini</string>
    <string name="nokia">Nokia</string>
    <string name="oneplus">OnePlus</string>
    <string name="playStation">PlayStation</string>
    <string name="razer">Razer</string>
    <string name="samsung">Samsung</string>
    <string name="spotify">Spotify</string>
    <string name="t_mobile">T-Mobile</string>
    <string name="telegram">Telegram</string>
    <string name="tesla">Tesla</string>
    <string name="twitter">Twitter</string>
    <string name="ubuntu">Ubuntu</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="xda">XDA Developers</string>
    <string name="windows">Windows</string>
    <string name="dark_mode_on">On</string>
    <string name="dark_mode_off">Off</string>
    <string name="dark_mode_set_by_battery_saver">Set by battery saver</string>
    <string name="dark_mode_system_default">System default</string>
    <string name="create_backup">Backup</string>
    <string name="edit">Edit</string>
    <string name="write_storage_permission_rationale">Storage permission is required to save the new update</string>
    <string name="pref_accent">Follow system accent</string>
    <string name="pref_accent_on">Using default app colour</string>
    <string name="pref_accent_off">Using system accent colour</string>
    <string name="create_all">Create multiple accents</string>
    <string name="create_all_summary">Create multiple brand, preset and wallpaper colours at once</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="create_selected">Create selected accents</string>
    <string name="accents_created">Accents created</string>
    <string name="restoring_accents">Restoring accents</string>
    <string name="empty_backup">Extracted backup is empty</string>
    <string name="uninstalling">Uninstalling %s</string>
    <string name="creating">Creating %s</string>
    <string name="error_restoring">Couldn\'t restore accents</string>
    <string name="view_backup_contents">View contents (%d)</string>
    <string name="uninstall">Uninstall</string>
    <string name="invert_selection">Invert selection</string>
    <string name="reboot">Reboot</string>
    <string name="purple">Purple</string>
    <string name="md_colors">Material Design colour palette</string>
    <string name="title_green">Green</string>
    <string name="Files">Files</string>
    <string name="backup_folder">Backups</string>
    <string name="update_folder">Updates</string>
    <string name="auto_backup_title">Backup automatically</string>
    <string name="backup_interval_summary">Set the interval(in days) between automatic backups</string>
    <string name="auto_backup_summary_off">Automatic backup is disabled</string>
    <string name="delete_old_summary_on">Old backups which were created automatically will be deleted before a new one is created</string>
    <string name="delete_old_summary_off">Old backups which were created automatically will not be deleted</string>
    <string name="daily_accent_title">Daily random accents</string>
    <string name="daily_accent_summary">A random accent will be enabled every morning</string>
    <string name="lab_l" translatable="false">L</string>
    <string name="lab_a" translatable="false">A</string>
    <string name="lab_b" translatable="false">B</string>
    <string name="color_space_rgb">RGB</string>
    <string name="color_space_hsl">HSL</string>
    <string name="color_space_lab">LAB</string>
    <plurals name="auto_backup_summary_on">
        <item quantity="one">Accents will be backed up daily</item>
        <item quantity="other">Accents will be backed up once in every %d days</item>
    </plurals>

</resources>
