<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <app.akilesh.qacc.ui.preferences.StyledPreferenceCategory
        app:key="general_category"
        app:title="@string/general_header"
        app:allowDividerBelow="false"
        app:initialExpandedChildrenCount="2">

        <ListPreference
            app:key="themePref"
            app:title="@string/display_title"
            app:icon="@drawable/ic_outline_nights_stay"
            app:defaultValue="default"
            app:dialogTitle="@string/display_title"
            app:entries="@array/themeListArray"
            app:entryValues="@array/themeEntryArray"
            app:useSimpleSummaryProvider="true"/>

        <app.akilesh.qacc.ui.preferences.StyledSwitchPreferenceCompat
            app:key="system_accent"
            app:title="@string/pref_accent"
            app:summaryOff="@string/pref_accent_on"
            app:summaryOn="@string/pref_accent_off"
            app:icon="@drawable/ic_palette_24dp"
            app:defaultValue="false"
            />

    </app.akilesh.qacc.ui.preferences.StyledPreferenceCategory>

    <app.akilesh.qacc.ui.preferences.StyledPreferenceCategory
        app:key="accents_category"
        app:title="@string/accents_header"
        app:allowDividerAbove="false"
        app:initialExpandedChildrenCount="2">

        <app.akilesh.qacc.ui.preferences.StyledSwitchPreferenceCompat
            app:key="separate_accent"
            app:icon="@drawable/ic_invert_colors"
            app:title="@string/separate_accents_title"
            app:defaultValue="false"
            app:summaryOff="@string/separate_accent_summary_off"
            app:summaryOn="@string/separate_accent_summary_on"/>

        <app.akilesh.qacc.ui.preferences.StyledSwitchPreferenceCompat
            app:key="customise"
            app:title="@string/tweak"
            app:icon="@drawable/ic_colorize"
            app:defaultValue="false"
            app:summary="@string/tweak_summary" />

        <Preference
            app:key="backups"
            app:icon="@drawable/ic_round_settings_backup_restore"
            app:title="@string/backup_restore"
            app:summary="@string/backup_restore_summary"/>

    </app.akilesh.qacc.ui.preferences.StyledPreferenceCategory>

</androidx.preference.PreferenceScreen>
