<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/preview_color_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/picker_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:layout_marginTop="16dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <FrameLayout
                android:id="@+id/wallFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/color_wallpaper" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/wall_colors"
                    style="@style/Cards">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/set_wallpaper_color" />
                </com.google.android.material.card.MaterialCardView>
            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipChildren="false">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/color_custom" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/custom"
                    style="@style/Cards">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/set_custom_color" />
                </com.google.android.material.card.MaterialCardView>


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipChildren="false">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/presets" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/preset"
                    style="@style/Cards">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/set_preset_color" />
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color_name"
                android:importantForAutofill="noExcludeDescendants"
                android:padding="20dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_previous"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/previous"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/create_new"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>