<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/hue"
            android:text="@string/hue" />

        <com.google.android.material.slider.Slider
            android:id="@+id/hue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:floatingLabel="true"
            android:valueFrom="0"
            android:valueTo="359" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/saturation"
            android:text="@string/saturation" />

        <com.google.android.material.slider.Slider
            android:id="@+id/saturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:floatingLabel="true"
            android:valueFrom="0"
            android:valueTo="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/lightness"
            android:text="@string/lightness" />

        <com.google.android.material.slider.Slider
            android:id="@+id/lightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:floatingLabel="true"
            android:valueFrom="0"
            android:valueTo="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
