<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_backup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/restore"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_outline_backup"
                android:drawableTint="?colorPrimary"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/create_backup"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/restore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_backup"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_round_settings_backup_restore"
                android:drawableTint="?colorPrimary"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/restore"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/local_backup_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingTop="16dp"
            android:text="@string/local_backups"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="?colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_backup" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_backup_files"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/local_backup_title"
            android:layout_margin="8dp"
            tools:listitem="@layout/recyclerview_item_backups" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>